Update with more sections

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,9 +40,13 @@
 
     <!-- Features -->
     {% include features.html %}
+    {% include app_components.html %}
 
     <!-- Pricing Tables -->
     {% include prices.html %}
+    
+    <!-- Contact Us -->
+    {% include contact.html %}
 
     <!-- Footer -->
     {% include footer.html %}
