--- a/_includes/prices.html
+++ b/_includes/prices.html
@@ -1,6 +1,9 @@
 <div class="section valign-wrapper">
   <div class="container">
     <div class="row">
+      <div class="col s12 center" style="padding-bottom: 3%">
+        <h2> Our Plans </h2>
+      </div>
       <div class="col s12 m4">
         <div class="pricing-table">
           <div class="pricing-header">
@@ -53,7 +56,7 @@
         <div class="pricing-table">
           <div class="pricing-header">
             <i class="icon-rocket"></i>
-            <h4>Transformation</h4>
+            <h4>Transform</h4>
             <div class="price">
               <span class="currency">₹</span>
               <span class="dollars">10000</span>
