Responsive fix. Some font sizes

--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,41 +1,41 @@
-<div class="section valign-wrapper">
+<div class="section valign-wrapper full-height">
   <div class="container">
     <div class="row">
       <div class="col s12"><h2 class="section-title">Our Approach</h2></div>
-      <div class="col s12 m6 l6">
+      <div class="col s12 m8 l6">
         <h4><i class="icon-light-bulb"></i></h4>
         <h4>Assessment</h4>
         <p class="caption">Detailed Health and Fitness assessment followed by discussion with the coach.
         This assessment will lay the foundation of your 
         </p>
       </div>
-      <div class="col s12 m6 l6">
+      <div class="col s12 m8 l6">
         <h4><i class="icon-bolt"></i></h4>
         <h4>Learning</h4>
         <p class="caption">We believe in educating clients for a sustainable lifestyle change. We will ensure
         that you gain knowledge and understand the science.
         </p>
       </div>
-      <div class="col s12 m6 l6">
+      <div class="col s12 m8 l6">
         <h4><i class="icon-rocket"></i></h4>
         <h4>Personalized</h4>
         <p class="caption"> Your nutrition and workout plans will be personalized as per your requirements to increase
         adherence to the plan.
         </p>
       </div>
-      <div class="col s12 m6 l6">
+      <div class="col s12 m8 l6">
         <h4><i class="icon-settings"></i></h4>
         <h4>Discipline</h4>
         <p class="caption">We will not only provide you with personalized plans but also ensure that you are motivated
         enough to execute them and get the results you desire.
         </p>
       </div>
-      <div class="col s12 m6 l6">
+      <div class="col s12 m8 l6">
         <h4><i class="icon-umbrella"></i></h4>
         <h4>Monitoring</h4>
         <p class="caption">Weekly progress monitoring on 8 different parameters of health and fitness will be provided.</p>
       </div>
-      <div class="col s12 m6 l6">
+      <div class="col s12 m8 l6">
         <h4><i class="icon-compass"></i></h4>
         <h4>Support</h4>
         <p class="caption">WhatsApp / Email / Call support and a 30 min video / audio session (once a week) with your coach.</p>
