--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -2,17 +2,16 @@
   <div class="container">
     <div class="row">
       <div class="col s12 center">
-        <h1>Approach Components</h1>
+        <h1>What Subscribers Say..</h1>
         <div class="row masonry-grid">
           <div class="col s12 m6 l4">
-            <div class="card">
-              <div class="card-image">
-                <img src="{{ 'images/unsplash_gradienta.jpg' | relative_url }}">
-                <span class="card-title">Customized Training</span>
-              </div>
-              <div class="card-content" style="color: white; background-color: black">
-                <ul class="center">
-                  <li> <h5><i class="icon-crosshair"></i> Custom Training Plans</h5>
+            <div class="card" style="background-color: black">
+              <div class="card-content" style="color: white">
+                <h4 class="card-title">Customized Training</h4>
+                <br /> 
+                <ul class="pricing-features">
+                  <li class="pricing-feature">
+                    <h5><i class="icon-crosshair"></i> Custom Training Plans</h5>
                     <p>
                       Your workout plans will be in consideration of your preferences whether you wish to work out at home
                       or at a gym.
@@ -45,14 +44,12 @@
             </div>
           </div>
           <div class="col s12 m6 l4">
-            <div class="card">
-              <div class="card-image">
-                <img src="{{ 'images/unsplash_gradienta.jpg' | relative_url }}">
-                <span class="card-title">Personalized Nutrition</span>
-              </div>
-              <div class="card-content" style="color: white; background-color: black">
-                <ul class="center">
-                  <li>
+            <div class="card" style="background-color: black">
+              <div class="card-content" style="color: white">
+                <h4 class="card-title">Personalized Nutrition</h4>
+                <br /> 
+                <ul class="pricing-features">
+                  <li class="pricing-feature">
                     <h5><i class="icon-crosshair"></i> Nutrition Plans</h5>
                     <p>
                       Your nutrition plans will be built around your lifestyle and living circumstances (i.e. access to cooking,
@@ -60,7 +57,7 @@
                     </p>
                   </li>
                   <br />
-                  <li>
+                  <li class="pricing-feature">
                     <h5><i class="icon-crosshair"></i> Flexible Plans</h5>
                     <p>
                       Our nutrition plans are tailored as per your preferences of lacto vegetarian / ovo vegetarian / non-vegetarian / vegan /
@@ -68,14 +65,14 @@
                     </p>
                   </li>
                   <br />
-                  <li>
+                  <li class="pricing-feature">
                     <h5><i class="icon-crosshair"></i> Need-based Plans</h5>
                     <p>
                       If required, we would also help you with inclusion of fasting routines into your diet plans.
                     </p>
                   </li>
                   <br />
-                  <li>
+                  <li class="pricing-feature">
                     <h5><i class="icon-crosshair"></i> Easy-to-cook Recipes</h5>
                     <p>
                       We will also suggest easy to make recipes around your nutrition plan.
@@ -86,14 +83,12 @@
             </div>
           </div>
           <div class="col s12 m6 l4">
-            <div class="card">
-              <div class="card-image">
-                <img src="{{ 'images/unsplash_gradienta.jpg' | relative_url }}">
-                <span class="card-title">Lifestyle Enhancement</span>
-              </div>
-              <div class="card-content" style="color: white; background-color: black">
-                <ul class="center">
-                  <li>
+            <div class="card" style="background-color: black">
+              <div class="card-content" style="color: white">
+                <h4 class="card-title">Lifestyle Enhancement</h4>
+                <br /> 
+                <ul class="pricing-features">
+                  <li class="pricing-feature">
                     <h5><i class="icon-crosshair"></i> Healthy Habits</h5>
                     <p>
                       Constant tracking of your lifestyle and habits, to inculcate changes for a healthier lifestyle. We suggest changes
@@ -101,7 +96,7 @@
                     </p>
                   </li>
                   <br />
-                  <li>
+                  <li class="pricing-feature">
                     <h5><i class="icon-crosshair"></i> Sleeping Cycle</h5>
                     <p>
                        Understanding your current sleep pattern and then suggesting improvements to adhere to Circadian rhythm. Sleep
@@ -109,14 +104,14 @@
                     </p>
                   </li>
                   <br />
-                  <li>
+                  <li class="pricing-feature">
                     <h5><i class="icon-crosshair"></i> Water Intake</h5>
                     <p>
                       Tracking your water intake and modulating it as per your environment and workout plans.
                     </p>
                   </li>
                   <br />
-                  <li>
+                  <li class="pricing-feature">
                     <h5><i class="icon-crosshair"></i> Mindfulness</h5>
                     <p>
                       We will suggest mindfulness routines and means for holistic health, in turn affecting happiness.
