--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,6 +44,8 @@
 
     <!-- Pricing Tables -->
     {% include prices.html %}
+
+    <!-- Testimonials -->
     
     <!-- Contact Us -->
     {% include contact.html %}
