--- a/_includes/prices.html
+++ b/_includes/prices.html
@@ -1,4 +1,4 @@
-<div class="section valign-wrapper">
+<div class="section valign-wrapper full-height">
   <div class="container">
     <div class="row">
       <div class="col s12 center" style="padding-bottom: 3%">
@@ -11,7 +11,7 @@
             <h4>Trial</h4>
             <div class="price">
               <span class="currency">₹</span>
-              <span class="dollars">3000</span>
+              <span class="dollars" style="font-size: 80%">3000</span>
             </div>
           </div>
           <ul class="pricing-features">
@@ -35,7 +35,7 @@
             <h4>Kickstarter</h4>
             <div class="price">
               <span class="currency">₹</span>
-              <span class="dollars">6000</span>
+              <span class="dollars" style="font-size: 80%">6000</span>
             </div>
           </div>
           <ul class="pricing-features">
@@ -59,7 +59,7 @@
             <h4>Transform</h4>
             <div class="price">
               <span class="currency">₹</span>
-              <span class="dollars">10000</span>
+              <span class="dollars" style="font-size: 80%">10000</span>
             </div>
           </div>
           <ul class="pricing-features">
