Add the rest of two sections

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -2,123 +2,44 @@
   <div class="container">
     <div class="row">
       <div class="col s12 center">
-        <h1>What Subscribers Say..</h1>
+        <h1>Testimonials</h1>
         <div class="row masonry-grid">
           <div class="col s12 m6 l4">
-            <div class="card" style="background-color: black">
-              <div class="card-content" style="color: white">
-                <h4 class="card-title">Customized Training</h4>
-                <br /> 
-                <ul class="pricing-features">
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Custom Training Plans</h5>
-                    <p>
-                      Your workout plans will be in consideration of your preferences whether you wish to work out at home
-                      or at a gym.
-                    </p>
-                  </li>
-                  <br />
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Fitness Goals</h5>
-                    <p>
-                      We will guide you to achieve your physical fitness goals of strength, endurance and flexibility.
-                    </p>
-                  </li>
-                  <br />
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Accurate References</h5>
-                    <p>
-                      We also provide reference workout videos so that you can perform your exercises in correct posture
-                      for maximum impact.
-                    </p>
-                  </li>
-                  <br />
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Live Workouts</h5>
-                    <p>
-                      We conduct live workout sessions for better output: all tribes welcome.
-                    </p>
-                  </li>
-                </ul>
+            <div class="card">
+              <div class="card-content" style="color: white; background-color: black">
+                <p>
+                  Rohit is a well-researched and informed trainer. He has adequate knowledge when it comes to
+                  recommending a diet and workout routine. His patience and resilience has helped me not only shred 6 kgs
+                  in a sustainable way but also gain interest in keeping myself fit. We haven't yet hit our goals due
+                  to irregularities on my part but this guy does not give up on you so easily.
+                  <span class="right"> <h4> Nitesh </h4> </span>
+                </p>
               </div>
             </div>
           </div>
           <div class="col s12 m6 l4">
-            <div class="card" style="background-color: black">
-              <div class="card-content" style="color: white">
-                <h4 class="card-title">Personalized Nutrition</h4>
-                <br /> 
-                <ul class="pricing-features">
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Nutrition Plans</h5>
-                    <p>
-                      Your nutrition plans will be built around your lifestyle and living circumstances (i.e. access to cooking,
-                      food availability, etc.)
-                    </p>
-                  </li>
-                  <br />
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Flexible Plans</h5>
-                    <p>
-                      Our nutrition plans are tailored as per your preferences of lacto vegetarian / ovo vegetarian / non-vegetarian / vegan /
-                      lactose-free / lacto-ovo vegetarian / pescatarian food. 
-                    </p>
-                  </li>
-                  <br />
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Need-based Plans</h5>
-                    <p>
-                      If required, we would also help you with inclusion of fasting routines into your diet plans.
-                    </p>
-                  </li>
-                  <br />
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Easy-to-cook Recipes</h5>
-                    <p>
-                      We will also suggest easy to make recipes around your nutrition plan.
-                    </p>
-                  </li>
-                </ul>
-              </div>
+            <div class="card">
+              <div class="card-content" style="color: white; background-color: black">
+                <p>
+                  Thanks for being a good mentor and for guiding me on the right path to reach my goal. I am very much
+                  satisfied with my mentor Rohit. He taught me each and everything clearly and clarified my doubts. Thank
+                  you for giving me this opportunity.
+                  <span class="right"> <h4> Archana </h4> </span>
+                </p>
+            </div>
             </div>
           </div>
           <div class="col s12 m6 l4">
-            <div class="card" style="background-color: black">
-              <div class="card-content" style="color: white">
-                <h4 class="card-title">Lifestyle Enhancement</h4>
-                <br /> 
-                <ul class="pricing-features">
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Healthy Habits</h5>
-                    <p>
-                      Constant tracking of your lifestyle and habits, to inculcate changes for a healthier lifestyle. We suggest changes
-                      that can be adapted to develop healthier habits.
-                    </p>
-                  </li>
-                  <br />
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Sleeping Cycle</h5>
-                    <p>
-                       Understanding your current sleep pattern and then suggesting improvements to adhere to Circadian rhythm. Sleep
-                       is one of the most important factors for healthy lifestyle.
-                    </p>
-                  </li>
-                  <br />
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Water Intake</h5>
-                    <p>
-                      Tracking your water intake and modulating it as per your environment and workout plans.
-                    </p>
-                  </li>
-                  <br />
-                  <li class="pricing-feature">
-                    <h5><i class="icon-crosshair"></i> Mindfulness</h5>
-                    <p>
-                      We will suggest mindfulness routines and means for holistic health, in turn affecting happiness.
-                    </p>
-                  </li>
-                </ul>
-              </div>
+            <div class="card">
+              <div class="card-content" style="color: white; background-color: black">
+                <p>
+                  It was really great working with you over these 4 weeks. You helped me understand the science
+                  behind proper diet and training fairly easily. The personalized program you created after
+                  thoroughly understanding my existing lifestyle helped me stay on track and become fitter as well
+                  as energetic. Your availability to answer my questions movitvated me to continue. Thank you Rohit.
+                  <span class="right"> <h4> Ravina </h4> </span>
+                </p>
+            </div>
             </div>
           </div>
         </div>
