--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,6 +46,10 @@
     {% include prices.html %}
 
     <!-- Testimonials -->
+    {% include testimonials.html %}
+
+    <!-- Story -->
+    {% include story.html %}
     
     <!-- Contact Us -->
     {% include contact.html %}
