Finish site with some touchups left

--- a/_includes/app_components.html
+++ b/_includes/app_components.html
@@ -2,15 +2,15 @@
   <div class="container">
     <div class="row">
       <div class="col s12 center">
-        <h1>Approach Components</h1>
+        <h1 style="color: #28334A">Approach Components</h1>
         <div class="row masonry-grid">
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <img src="{{ 'images/unsplash_gradienta.jpg' | relative_url }}">
+                <img src="{{ 'images/c_train.jpg' | relative_url }}">
                 <span class="card-title">Customized Training</span>
               </div>
-              <div class="card-content" style="color: white; background-color: black">
+              <div class="card-content" style="color: white; background-color: #28334A">
                 <ul class="center">
                   <li> <h5><i class="icon-crosshair"></i> Custom Training Plans</h5>
                     <p>
@@ -47,10 +47,10 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <img src="{{ 'images/unsplash_gradienta.jpg' | relative_url }}">
+                <img src="{{ 'images/p_nutrition.jpg' | relative_url }}">
                 <span class="card-title">Personalized Nutrition</span>
               </div>
-              <div class="card-content" style="color: white; background-color: black">
+              <div class="card-content" style="color: white; background-color: #28334A">
                 <ul class="center">
                   <li>
                     <h5><i class="icon-crosshair"></i> Nutrition Plans</h5>
@@ -88,10 +88,10 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <img src="{{ 'images/unsplash_gradienta.jpg' | relative_url }}">
+                <img src="{{ 'images/life_enhance.jpg' | relative_url }}">
                 <span class="card-title">Lifestyle Enhancement</span>
               </div>
-              <div class="card-content" style="color: white; background-color: black">
+              <div class="card-content" style="color: white; background-color: #28334A">
                 <ul class="center">
                   <li>
                     <h5><i class="icon-crosshair"></i> Healthy Habits</h5>
