--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,4 +1,4 @@
-<div class="section valign-wrapper full-height">
+<div class="section valign-wrapper full-height" id="approach">
   <div class="container">
     <div class="row">
       <div class="col s12"><h2 class="section-title">Our Approach</h2></div>
