--- a/_includes/story.html
+++ b/_includes/story.html
@@ -1,4 +1,4 @@
-<div class="section full-height">
+<div class="section full-height" id="team">
   <div class="container">
     <div class="row">
       <div class="col s12 center">
@@ -9,7 +9,7 @@
               <div class="card-image">
                 <img src="{{ 'images/Rohit.jpg' | relative_url }}">
               </div>
-              <div class="card-content" style="color: white; background-color: #42c4ac">
+              <div class="card-content" style="color: #28334A; background-color: #FBDE44">
                 <span class="card-title">
                   Rohit Bharti, Founder <br />
                   An INFS Certified Nurtition and Fitness Consultant
@@ -29,7 +29,7 @@
               <div class="card-image">
                 <img src="{{ 'images/shefali.jpeg' | relative_url }}">
               </div>
-              <div class="card-content" style="color: white; background-color: #42c4ac">
+              <div class="card-content" style="color: #28334A; background-color: #FBDE44">
                 <span class="card-title">Shefali Vijaywargiya, Co-founder</span>
                 <p>
                   Being a fitness enthusiast myself, I believe that the power of personalized nutrition coupled
