--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,12 +1,12 @@
-<div class="section light full-height">
+<div class="section light full-height" id="testimonials">
   <div class="container">
     <div class="row">
       <div class="col s12 center">
-        <h1>Testimonials</h1>
+        <h1 style="color: #28334A">Testimonials</h1>
         <div class="row masonry-grid">
           <div class="col s12 m6 l4">
             <div class="card">
-              <div class="card-content" style="color: white; background-color: black">
+              <div class="card-content" style="color: white; background-color: #28334A">
                 <p>
                   Rohit is a well-researched and informed trainer. He has adequate knowledge when it comes to
                   recommending a diet and workout routine. His patience and resilience has helped me not only shred 6 kgs
@@ -19,7 +19,7 @@
           </div>
           <div class="col s12 m6 l4">
             <div class="card">
-              <div class="card-content" style="color: white; background-color: black">
+              <div class="card-content" style="color: white; background-color: #28334A">
                 <p>
                   Thanks for being a good mentor and for guiding me on the right path to reach my goal. I am very much
                   satisfied with my mentor Rohit. He taught me each and everything clearly and clarified my doubts. Thank
@@ -31,7 +31,7 @@
           </div>
           <div class="col s12 m6 l4">
             <div class="card">
-              <div class="card-content" style="color: white; background-color: black">
+              <div class="card-content" style="color: white; background-color: #28334A">
                 <p>
                   It was really great working with you over these 4 weeks. You helped me understand the science
                   behind proper diet and training fairly easily. The personalized program you created after
