--- a/css/startup-materialize.css
+++ b/css/startup-materialize.css
@@ -2865,7 +2865,7 @@ ul.staggered-list li {
 
 .page-footer {
   padding-top: 20px;
-  background-color: #1de9c3;
+  background-color: #28334A;
 }
 
 .page-footer .footer-copyright {
@@ -2879,7 +2879,7 @@ ul.staggered-list li {
           align-items: center;
   padding: 10px 0px;
   color: rgba(255, 255, 255, 0.8);
-  background-color: rgba(51, 51, 51, 0.08);
+  background-color: #28334A;
 }
 
 table, th, td {
@@ -4184,7 +4184,7 @@ nav ul a span.badge {
 }
 
 nav {
-  color: #fff;
+  color: #28334A;
   background-color: #1de9c3;
   width: 100%;
   height: 56px;
@@ -4244,7 +4244,7 @@ nav .button-collapse i {
 
 nav .brand-logo {
   position: absolute;
-  color: #fff;
+  color: #28334A;
   display: inline-block;
   font-size: 2.1rem;
   padding: 0;
@@ -4364,12 +4364,12 @@ nav .input-field label {
 }
 
 nav .input-field label i {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(40, 51, 74, 0.7);
   transition: color .3s;
 }
 
 nav .input-field label.active i {
-  color: #fff;
+  color: #28334A;
 }
 
 .navbar-fixed {
@@ -5900,28 +5900,28 @@ button:focus {
 
 label {
   font-size: 0.8rem;
-  color: #9e9e9e;
+  color: #28334A;
 }
 
 /* Text Inputs + Textarea
    ========================================================================== */
 /* Style Placeholders */
 ::-webkit-input-placeholder {
-  color: #d1d1d1;
+  color: #28334A;
 }
 
 :-moz-placeholder {
   /* Firefox 18- */
-  color: #d1d1d1;
+  color: #28334A;
 }
 
 ::-moz-placeholder {
   /* Firefox 19+ */
-  color: #d1d1d1;
+  color: #28334A;
 }
 
 :-ms-input-placeholder {
-  color: #d1d1d1;
+  color: #28334A;
 }
 
 /* Text inputs */
@@ -5940,7 +5940,7 @@ input[type=search],
 textarea.materialize-textarea {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #9e9e9e;
+  border-bottom: 1px solid #28334A;
   border-radius: 0;
   outline: none;
   height: 3rem;
@@ -6228,7 +6228,7 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field label {
-  color: #9e9e9e;
+  color: #28334A;
   position: absolute;
   top: 0.8rem;
   left: 0;
@@ -6252,7 +6252,7 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field .prefix.active {
-  color: #26a69a;
+  color: #28334A;
 }
 
 .input-field .prefix ~ input,
@@ -6292,16 +6292,16 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field input[type=search]:focus {
-  background-color: #fff;
+  background-color: #28334A;
   border: 0;
   box-shadow: none;
-  color: #444;
+  color: #28334A;
 }
 
 .input-field input[type=search]:focus + label i,
 .input-field input[type=search]:focus ~ .mdi-navigation-close,
 .input-field input[type=search]:focus ~ .material-icons {
-  color: #444;
+  color: #28334A;
 }
 
 .input-field input[type=search] + label {
@@ -6313,7 +6313,7 @@ textarea.materialize-textarea + label:after {
   position: absolute;
   top: 0;
   right: 1rem;
-  color: transparent;
+  color: #28334A;
   cursor: pointer;
   font-size: 2rem;
   transition: .3s color;
@@ -9367,7 +9367,7 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   padding-left: 5px;
   margin-left: -40px;
   font-size: 28px;
-  background-color: #000;
+  background-color: #28334A;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
@@ -9403,11 +9403,11 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 
 .pricing-table .pricing-features .pricing-feature.disabled,
 .pricing-table .pricing-features .pricing-feature.disabled i {
-  color: rgba(19, 192, 160, 0.5);
+  color: rgba(251, 222, 68, 0.5);
 }
 
 .pricing-table .pricing-features .pricing-feature:hover {
-  background-color: rgba(29, 233, 195, 0.2);
+  background-color: rgba(251, 222, 68, 0.2);
 }
 
 .section.white .pricing-header i {
@@ -9415,7 +9415,8 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 }
 
 .section.light .pricing-header i, .page-footer .section.footer-copyright .pricing-header i {
-  background-color: #42c4ac;
+  /* background-color: #42c4ac; */
+  background-color: rgb(218, 218, 18);
 }
 
 .section.light .pricing-features .pricing-feature.disabled, .page-footer .section.footer-copyright .pricing-features .pricing-feature.disabled,
@@ -9509,6 +9510,8 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+  color: #FBDE44;
+  background-color: inherit;
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -11773,7 +11776,7 @@ nav.navbar ul a:hover {
   padding: 64px 0;
   height: 100%;
   overflow: hidden;
-  background-color: #000;
+  background-color: #28334A;
   z-index: 3;
 }
 
@@ -11786,8 +11789,9 @@ nav.navbar ul a:hover {
 }
 
 .section.light, .page-footer .section.footer-copyright {
-  color: rgba(0, 0, 0, 0.6);
-  background-color: #42c4ac;
+  color: #28334A;
+  /* background-color: #42c4ac; */
+  background-color: #FBDE44;
 }
 
 .section.light h1, .page-footer .section.footer-copyright h1, .section.light h2, .page-footer .section.footer-copyright h2, .section.light h3, .page-footer .section.footer-copyright h3, .section.light h4, .page-footer .section.footer-copyright h4, .section.light h5, .page-footer .section.footer-copyright h5 {
@@ -11823,9 +11827,9 @@ nav.navbar ul a:hover {
   overflow: hidden;
   background-color: transparent;
   box-shadow: none;
-  border: 2px solid #eee;
+  border: 2px solid #28334A;
   box-sizing: content-box;
-  color: #eee;
+  color: #28334A;
   transition: color .2s, background-color .2s;
 }
 
@@ -12037,7 +12041,7 @@ textarea.materialize-textarea + label {
 
 /**** FOOTER ****/
 .page-footer {
-  color: #444;
+  color: #FBDE44;
   padding: 40px 0;
   margin: 0;
 }
