--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,19 +1,19 @@
-<div class="section light valign-wrapper">
+<div class="section light valign-wrapper" id="contact">
   <div class="container">
     <form>
       <div class="row">
-        <div class="col s12"><h2 class="section-title">Contact Us</h2></div>
+        <div class="col s12"><h2 class="section-title" style="color: #28334A">Contact Us</h2></div>
         <div class="input-field col s6">
           <input id="first_name" type="text">
-          <label for="first_name">First Name</label>
+          <label for="first_name" style="color: #28334A">First Name</label>
         </div>
         <div class="input-field col s6">
           <input id="last_name" type="text">
-          <label for="last_name">Last Name</label>
+          <label for="last_name" style="color: #28334A">Last Name</label>
         </div>
-        <div class="input-field col s12">
+        <div class="input-field col s12" >
           <textarea id="message" class="materialize-textarea"></textarea>
-          <label for="message">Message</label>
+          <label for="message" style="color: #28334A">Message</label>
           <a class="waves-effect waves-light btn-large">Leave a Message</a>
         </div>
       </div>
