--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <img class="materialize-logo" src="{{ 'images/materialize-teal.png' | relative_url }}" alt="">
         <p>Made with love by Materialize.</p>
       </div>
-      <div class="col s6 m3">
+      <!-- div class="col s6 m3">
         <h5>About</h5>
         <ul>
           <li><a href="#!">Blog</a></li>
@@ -28,7 +28,7 @@
           <li><a href="#!">Facebook</a></li>
           <li><a href="#!">Github</a></li>
         </ul>
-      </div>
+      </div -->
     </div>
   </div>
 </footer>
