--- a/_includes/prices.html
+++ b/_includes/prices.html
@@ -1,4 +1,4 @@
-<div class="section valign-wrapper full-height">
+<div class="section valign-wrapper full-height" id="plans">
   <div class="container">
     <div class="row">
       <div class="col s12 center" style="padding-bottom: 3%">
