--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,20 +4,16 @@
   <body>
 
     <!-- Navbar -->
-    <nav class="navbar absolute">
+    <nav class="navbar">
       <div class="nav-wrapper">
-        <a href="horizontal-half.html" class="brand-logo"><i class="icon-diamond"></i></a>
+        <a href="" class="brand-logo" style="padding-top: 10px"> <img src="{{ 'images/logo.jpg' | relative_url }}" style="width: 80%"/> </a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li class="active"><a class="dropdown-button" href="#!" data-activates="pages" data-constrainWidth="false" data-belowOrigin="true">Pages<i class="material-icons right">arrow_drop_down</i></a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="docs/about.html">Docs</a></li>
-          <li><a href="#">Buy Now!</a></li>
+          <li style="color: #28334A"><a href="#approach">Approach</a></li>
+          <li style="color: #28334A"><a href="#plans">Plans</a></li>
+          <li style="color: #28334A"><a href="#testimonials">Testimonials</a></li>
+          <li style="color: #28334A"><a href="#team">Team</a></li>
+          <li style="color: #28334A"><a href="#contact">Contact Us</a></li>
         </ul>
-
-        {% include pages.html %}
-
-        <a href="#" data-activates="slide-out" class="button-collapse right"><i class="material-icons white-text">menu</i></a>
       </div>
     </nav>
     {% include slidenav.html %}
@@ -26,12 +22,10 @@
     <div class="flip-out-intro header full-height">
       <div class="fixed-wrapper">
         <div class="background">
-          <img src="{{ 'images/unsplash_gradienta.jpg' | relative_url }}" alt="">
+          <img src="{{ 'images/collage.jpg' | relative_url }}" alt="">
         </div>
         <div class="header-wrapper row valign-wrapper">
           <div class="col s12 m8 offset-m2 valign">
-            <h1>Hustle and Health</h1>
-            <span class="tagline">To promote physical fitness and sustainable lifestyle changes for holistic health</span>
             <button class="read-more"><i class="icon-caret-down"></i></button>
           </div>
         </div>
